<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Samsung Electronics Co., LTD
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_sharing_error"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_overlay"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/disconnect"
        tools:ignore="ContentDescription"
        android:layout_marginTop="84dp"/>

    <TextView
        android:id="@+id/disconnect_message_text"
        style="@style/StatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38.6dp"
        android:layout_marginStart="76.3dp"
        android:layout_marginEnd="78.3dp"
        android:text="@string/disconnect_host" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45.8dp"
        android:layout_marginBottom="50dp">

        <Button
            android:id="@+id/button_cancel"
            style="@style/Button"
            android:text="@string/common_text_cancel" />

        <Button
            android:id="@+id/button_disconnect"
            style="@style/Button"
            android:layout_marginStart="17dp"
            android:text="@string/disconnect" />

    </LinearLayout>

</LinearLayout>