<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Samsung Electronics Co., LTD
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_overlay"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/button_back"
        android:layout_width="49.9dp"
        android:layout_height="49.9dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="19.5dp"
        android:background="@drawable/bg_menu"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="20.5dp"
            android:layout_height="20.5dp"
            android:src="@drawable/icon_back_sharing"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25.1dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_start_sharing"
            tools:ignore="ContentDescription" />

        <TextView
            style="@style/StatusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29.9dp"
            android:text="@string/view_lets_start_status_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35.8dp">

            <Button
                android:id="@+id/button_host"
                style="@style/Button"
                android:text="@string/common_text_host" />

            <Button
                android:id="@+id/button_guest"
                style="@style/Button"
                android:layout_marginStart="17dp"
                android:text="@string/common_text_guest" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>